--- a/src/Views/CadastroPet/stylesCadastroPets.css
+++ b/src/Views/CadastroPet/stylesCadastroPets.css
@@ -1,17 +1,18 @@
-.entire-page-cadastro {
+.entire-page-cadastro-pet {
     width: 100vw;
     height: 100vh;
     background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("../imgs/wallpaper.jpg");
+    /* background-image: url("../../imgs/wallpaper.jpg"); */
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
 
-.Caixa-Cadastro {
+.Caixa-Cadastro-Pet {
     background-color: white;
+    z-index: 10;
     display: flex;
     position: absolute;
     flex-direction: row;
@@ -20,7 +21,7 @@
     box-shadow: 3px 3px 3px 2px rgba(0, 0, 0, 0.4);
 }
 
-.Img-Cadastro-Div {
+.Img-Cadastro-Div-Pet {
     background-color: white;
     width: 45%;
     height: 100%;
@@ -29,11 +30,11 @@
     justify-content: center;
 }
 
-.Img-Cadastro {
+.Img-Cadastro-Pet {
     width: 90%;
 }
 
-.Tela-Cadastro {
+.Tela-Cadastro-Pet {
     background-color: rgba(8, 99, 205, 0.79);
     width: 55%;
     height: 100%;
@@ -43,23 +44,23 @@
     align-items: center;
 }
 
-.Texto-Cadastro {
+.Texto-Cadastro-Pet {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 60%;
 }
 
-.Titulo-Cadastro {
+.Titulo-Cadastro-Pet {
     color: white;
     font-family: Roboto;
     font-style: normal;
     font-weight: bold;
-    font-size: 70px;
+    font-size: 44px;
     letter-spacing: 0.03em;
     margin: 0;
 }
-.SubTitulo-Cadastro {
+.SubTitulo-Cadastro-Pet {
     color: white;
     font-family: Roboto;
     font-style: normal;
@@ -69,14 +70,14 @@
     margin-bottom: 5%;
 }
 
-.Inputs-Cadastro {
+.Inputs-Cadastro-Pet {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 60%;
 }
-.input-Cadastro {
+.input-Cadastro-Pet {
     width: 100%;
     height: 80px;
     margin: 5% 0;
@@ -84,9 +85,41 @@
     border-color: transparent;
     font-size: 24px;
     padding: 0 5%;
+}
+.input-Cadastro-Pet-Desc {
+    width: 100%;
+    height: 80px;
+    margin: 5% 0;
+    padding-top: 40px !important;
+    border-radius: 48px;
+    border-color: transparent;
+    font-size: 24px;
+    padding: 0 5%;
 
 }
-.enviar-Cadastro {
+.input-Cadastro-Pet-Img {
+    display: flex;
+    width: 60%;
+    background-color: white;
+    height: 200px;
+    align-items: center;
+    border-radius: 48px;
+    border-color: transparent;
+}
+
+.input-Cadastro-Pet-Img-label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    font-size: 24px;
+    color: rgba(100, 100, 100, 1);
+    font-family: 'myFont', Arial, Helvetica, sans-serif;
+}
+
+.enviar-Cadastro-Pet {
     background-color: #F36B53;
     border-radius: 40px;
     border-color: transparent;
@@ -96,7 +129,7 @@
     font-size: 24px;
     color: white
 }
-.Login-Cadastro {
+.CadastroPet-ListaPets {
     text-decoration: none;
     color: white;
     font-size: 24px;
@@ -104,54 +137,54 @@
 
 @media (min-width: 601px) and (max-width:1023px) {
 
-    .Caixa-Cadastro {
+    .Caixa-Cadastro-Pet {
         flex-direction: column;
         width: 90%;
         height: 90%;
     }
     
-    .Img-Cadastro-Div {
+    .Img-Cadastro-Div-Pet {
         width: auto;
         height: 35%;
     }
     
-    .Img-Cadastro {
+    .Img-Cadastro-Pet {
         width: auto;
         height: 90%;
     }
     
-    .Tela-Cadastro {
+    .Tela-Cadastro-Pet {
         width: 100%;
         height: 65%;
     }
     
-    .Texto-Cadastro {
+    .Texto-Cadastro-Pet {
         width: 60%;
     }
     
-    .Titulo-Cadastro {
+    .Titulo-Cadastro-Pet {
         font-size: 48px;
 
     }
-    .SubTitulo-Cadastro {
+    .SubTitulo-Cadastro-Pet {
         font-size: 20px;
         margin-bottom: 7%;
     }
     
-    .input-Cadastro {
+    .input-Cadastro-Pet {
         height: 48px;
         margin: 3% 0;
         font-size: 20px;
     
     }
-    .enviar-Cadastro {
+    .enviar-Cadastro-Pet {
         width: 300px;
         height: 48px;
         margin: 3% 0;
         font-size: 20px;
         color: white
     }
-    .Login-Cadastro {
+    .CadastroPet-ListaPets {
         text-decoration: none;
         color: white;
         font-size: 20px;
@@ -159,58 +192,58 @@
 }
 @media (min-width: 351px) and (max-width: 600px) {
 
-    .Caixa-Cadastro {
+    .Caixa-Cadastro-Pet {
         flex-direction: column;
         width: 90%;
         height: 90%;
     }
     
-    .Img-Cadastro-Div {
+    .Img-Cadastro-Div-Pet {
         width: auto;
         height: 35%;
     }
     
-    .Img-Cadastro {
+    .Img-Cadastro-Pet {
         width: auto;
         height: 80%;
     }
     
-    .Tela-Cadastro {
+    .Tela-Cadastro-Pet {
         width: 100%;
         height: 65%;
     }
     
-    .Texto-Cadastro {
+    .Texto-Cadastro-Pet {
         width: 70%;
     }
     
-    .Titulo-Cadastro {
+    .Titulo-Cadastro-Pet {
         font-size: 48px;
 
     }
-    .SubTitulo-Cadastro {
+    .SubTitulo-Cadastro-Pet {
         font-size: 20px;
         margin-bottom: 5%;
     }
 
-    .Inputs-Cadastro {
+    .Inputs-Cadastro-Pet {
         width: 70%;
     }
     
-    .input-Cadastro {
+    .input-Cadastro-Pet {
         height: 48px;
         margin: 3% 0;
         font-size: 20px;
     
     }
-    .enviar-Cadastro {
+    .enviar-Cadastro-Pet {
         width: 100%;
         height: 48px;
         margin: 3% 0;
         font-size: 20px;
         color: white
     }
-    .Login-Cadastro {
+    .CadastroPet-ListaPets {
         text-decoration: none;
         color: white;
         font-size: 20px;
@@ -219,82 +252,82 @@
 
 }
 @media (max-width: 350px) {
-    .Caixa-Cadastro {
+    .Caixa-Cadastro-Pet {
         flex-direction: column;
         width: 90%;
         height: 90%;
     }
     
-    .Img-Cadastro-Div {
+    .Img-Cadastro-Div-Pet {
         width: auto;
         height: 35%;
     }
     
-    .Img-Cadastro {
+    .Img-Cadastro-Pet {
         width: auto;
         height: 60%;
     }
     
-    .Tela-Cadastro {
+    .Tela-Cadastro-Pet {
         width: 100%;
         height: 65%;
     }
     
-    .Texto-Cadastro {
+    .Texto-Cadastro-Pet {
         width: 70%;
     }
     
-    .Titulo-Cadastro {
+    .Titulo-Cadastro-Pet {
         font-size: 40px !important;
         margin: 0% 0;
     }
-    .SubTitulo-Cadastro {
+    .SubTitulo-Cadastro-Pet {
         font-size: 20px;
         margin-bottom: 3%;
     }
 
-    .Inputs-Cadastro {
+    .Inputs-Cadastro-Pet {
         width: 70%;
     }
     
-    .input-Cadastro {
+    .input-Cadastro-Pet {
         height: 30px !important;
         margin: 3% 0;
         font-size: 16px !important;
     
     }
-    .enviar-Cadastro {
+    .enviar-Cadastro-Pet {
         width: 100%;
         height: 30px !important;
         margin: 3% 0;
         font-size: 20px;
     }
-    .Login-Cadastro {
+    .CadastroPet-ListaPets {
         font-size: 20px;
     }
 }
 
 @media (max-height: 880px) {
   
-    .Titulo-Cadastro {
+    .Titulo-Cadastro-Pet {
         font-size: 42px;
     }
-    .SubTitulo-Cadastro {
+    .SubTitulo-Cadastro-Pet {
         font-size: 18px;
     }
     
-    .input-Cadastro {
+    .input-Cadastro-Pet {
         height: 40px;
         margin: 3% 0;
         font-size: 20px;
     }
-    .enviar-Cadastro {
+    .enviar-Cadastro-Pet {
         width: 240px;
         height: 40px;
         margin: 3% 0;
         font-size: 18px;
     }
-    .Login-Cadastro {
+    .CadastroPet-ListaPets {
         font-size: 18px;
     }
 }
