--- a/src/Views/Cadastro/stylesCadastro.css
+++ b/src/Views/Cadastro/stylesCadastro.css
@@ -1,17 +1,18 @@
-.entire-page-cadastro-pet {
+.entire-page-cadastro {
     width: 100vw;
     height: 100vh;
     background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("../imgs/wallpaper.jpg");
+    /* background-image: url("../../imgs/wallpaper.jpg"); */
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
 
-.Caixa-Cadastro-Pet {
+.Caixa-Cadastro {
     background-color: white;
+    z-index: 10;
     display: flex;
     position: absolute;
     flex-direction: row;
@@ -20,7 +21,7 @@
     box-shadow: 3px 3px 3px 2px rgba(0, 0, 0, 0.4);
 }
 
-.Img-Cadastro-Div-Pet {
+.Img-Cadastro-Div {
     background-color: white;
     width: 45%;
     height: 100%;
@@ -29,11 +30,11 @@
     justify-content: center;
 }
 
-.Img-Cadastro-Pet {
+.Img-Cadastro {
     width: 90%;
 }
 
-.Tela-Cadastro-Pet {
+.Tela-Cadastro {
     background-color: rgba(8, 99, 205, 0.79);
     width: 55%;
     height: 100%;
@@ -43,23 +44,23 @@
     align-items: center;
 }
 
-.Texto-Cadastro-Pet {
+.Texto-Cadastro {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 60%;
 }
 
-.Titulo-Cadastro-Pet {
+.Titulo-Cadastro {
     color: white;
     font-family: Roboto;
     font-style: normal;
     font-weight: bold;
-    font-size: 44px;
+    font-size: 70px;
     letter-spacing: 0.03em;
     margin: 0;
 }
-.SubTitulo-Cadastro-Pet {
+.SubTitulo-Cadastro {
     color: white;
     font-family: Roboto;
     font-style: normal;
@@ -69,14 +70,14 @@
     margin-bottom: 5%;
 }
 
-.Inputs-Cadastro-Pet {
+.Inputs-Cadastro {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 60%;
 }
-.input-Cadastro-Pet {
+.input-Cadastro {
     width: 100%;
     height: 80px;
     margin: 5% 0;
@@ -84,41 +85,9 @@
     border-color: transparent;
     font-size: 24px;
     padding: 0 5%;
-}
-.input-Cadastro-Pet-Desc {
-    width: 100%;
-    height: 80px;
-    margin: 5% 0;
-    padding-top: 40px !important;
-    border-radius: 48px;
-    border-color: transparent;
-    font-size: 24px;
-    padding: 0 5%;
 
 }
-.input-Cadastro-Pet-Img {
-    display: flex;
-    width: 60%;
-    background-color: white;
-    height: 200px;
-    align-items: center;
-    border-radius: 48px;
-    border-color: transparent;
-}
-
-.input-Cadastro-Pet-Img-label {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    font-size: 24px;
-    color: rgba(100, 100, 100, 1);
-    font-family: 'myFont', Arial, Helvetica, sans-serif;
-}
-
-.enviar-Cadastro-Pet {
+.enviar-Cadastro {
     background-color: #F36B53;
     border-radius: 40px;
     border-color: transparent;
@@ -128,7 +97,7 @@
     font-size: 24px;
     color: white
 }
-.CadastroPet-ListaPets {
+.Login-Cadastro {
     text-decoration: none;
     color: white;
     font-size: 24px;
@@ -136,54 +105,54 @@
 
 @media (min-width: 601px) and (max-width:1023px) {
 
-    .Caixa-Cadastro-Pet {
+    .Caixa-Cadastro {
         flex-direction: column;
         width: 90%;
         height: 90%;
     }
     
-    .Img-Cadastro-Div-Pet {
+    .Img-Cadastro-Div {
         width: auto;
         height: 35%;
     }
     
-    .Img-Cadastro-Pet {
+    .Img-Cadastro {
         width: auto;
         height: 90%;
     }
     
-    .Tela-Cadastro-Pet {
+    .Tela-Cadastro {
         width: 100%;
         height: 65%;
     }
     
-    .Texto-Cadastro-Pet {
+    .Texto-Cadastro {
         width: 60%;
     }
     
-    .Titulo-Cadastro-Pet {
+    .Titulo-Cadastro {
         font-size: 48px;
 
     }
-    .SubTitulo-Cadastro-Pet {
+    .SubTitulo-Cadastro {
         font-size: 20px;
         margin-bottom: 7%;
     }
     
-    .input-Cadastro-Pet {
+    .input-Cadastro {
         height: 48px;
         margin: 3% 0;
         font-size: 20px;
     
     }
-    .enviar-Cadastro-Pet {
+    .enviar-Cadastro {
         width: 300px;
         height: 48px;
         margin: 3% 0;
         font-size: 20px;
         color: white
     }
-    .CadastroPet-ListaPets {
+    .Login-Cadastro {
         text-decoration: none;
         color: white;
         font-size: 20px;
@@ -191,58 +160,58 @@
 }
 @media (min-width: 351px) and (max-width: 600px) {
 
-    .Caixa-Cadastro-Pet {
+    .Caixa-Cadastro {
         flex-direction: column;
         width: 90%;
         height: 90%;
     }
     
-    .Img-Cadastro-Div-Pet {
+    .Img-Cadastro-Div {
         width: auto;
         height: 35%;
     }
     
-    .Img-Cadastro-Pet {
+    .Img-Cadastro {
         width: auto;
         height: 80%;
     }
     
-    .Tela-Cadastro-Pet {
+    .Tela-Cadastro {
         width: 100%;
         height: 65%;
     }
     
-    .Texto-Cadastro-Pet {
+    .Texto-Cadastro {
         width: 70%;
     }
     
-    .Titulo-Cadastro-Pet {
+    .Titulo-Cadastro {
         font-size: 48px;
 
     }
-    .SubTitulo-Cadastro-Pet {
+    .SubTitulo-Cadastro {
         font-size: 20px;
         margin-bottom: 5%;
     }
 
-    .Inputs-Cadastro-Pet {
+    .Inputs-Cadastro {
         width: 70%;
     }
     
-    .input-Cadastro-Pet {
+    .input-Cadastro {
         height: 48px;
         margin: 3% 0;
         font-size: 20px;
     
     }
-    .enviar-Cadastro-Pet {
+    .enviar-Cadastro {
         width: 100%;
         height: 48px;
         margin: 3% 0;
         font-size: 20px;
         color: white
     }
-    .CadastroPet-ListaPets {
+    .Login-Cadastro {
         text-decoration: none;
         color: white;
         font-size: 20px;
@@ -251,82 +220,82 @@
 
 }
 @media (max-width: 350px) {
-    .Caixa-Cadastro-Pet {
+    .Caixa-Cadastro {
         flex-direction: column;
         width: 90%;
         height: 90%;
     }
     
-    .Img-Cadastro-Div-Pet {
+    .Img-Cadastro-Div {
         width: auto;
         height: 35%;
     }
     
-    .Img-Cadastro-Pet {
+    .Img-Cadastro {
         width: auto;
         height: 60%;
     }
     
-    .Tela-Cadastro-Pet {
+    .Tela-Cadastro {
         width: 100%;
         height: 65%;
     }
     
-    .Texto-Cadastro-Pet {
+    .Texto-Cadastro {
         width: 70%;
     }
     
-    .Titulo-Cadastro-Pet {
+    .Titulo-Cadastro {
         font-size: 40px !important;
         margin: 0% 0;
     }
-    .SubTitulo-Cadastro-Pet {
+    .SubTitulo-Cadastro {
         font-size: 20px;
         margin-bottom: 3%;
     }
 
-    .Inputs-Cadastro-Pet {
+    .Inputs-Cadastro {
         width: 70%;
     }
     
-    .input-Cadastro-Pet {
+    .input-Cadastro {
         height: 30px !important;
         margin: 3% 0;
         font-size: 16px !important;
     
     }
-    .enviar-Cadastro-Pet {
+    .enviar-Cadastro {
         width: 100%;
         height: 30px !important;
         margin: 3% 0;
         font-size: 20px;
     }
-    .CadastroPet-ListaPets {
+    .Login-Cadastro {
         font-size: 20px;
     }
 }
 
 @media (max-height: 880px) {
   
-    .Titulo-Cadastro-Pet {
+    .Titulo-Cadastro {
         font-size: 42px;
     }
-    .SubTitulo-Cadastro-Pet {
+    .SubTitulo-Cadastro {
         font-size: 18px;
     }
     
-    .input-Cadastro-Pet {
+    .input-Cadastro {
         height: 40px;
         margin: 3% 0;
         font-size: 20px;
     }
-    .enviar-Cadastro-Pet {
+    .enviar-Cadastro {
         width: 240px;
         height: 40px;
         margin: 3% 0;
         font-size: 18px;
     }
-    .CadastroPet-ListaPets {
+    .Login-Cadastro {
         font-size: 18px;
     }
 }
