--- a/src/Views/Login/stylesLogin.css
+++ b/src/Views/Login/stylesLogin.css
@@ -5,11 +5,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("../imgs/wallpaper.jpg");
+    /* background-image: url("../../imgs/wallpaper.jpg"); */
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
 .Caixa-Login {
+    z-index: 10;
     background-color: white;
     display: flex;
     position: absolute;
@@ -101,6 +102,7 @@
     color: white;
     font-size: 24px;
 }
+
 
 @media (min-width: 601px) and (max-width:1023px) {
     .Caixa-Login {
